--- a/index.html
+++ b/index.html
@@ -300,22 +300,23 @@
                           data-wf-page-id="64cff9b87e411be3064bcb59"
                           data-wf-element-id="5a7d75d1-8997-5265-d313-afab920c1ecb">
                         <div class="div-block-51"><input type="text" class="text-field-2 w-input" maxlength="256"
-                                                         name="name-2" data-name="Name 2" placeholder="Your Name"
+                                                         name="name-2" data-name="Name 2" placeholder="Vaše ime.."
                                                          id="name"><input type="text" class="text-field-2 w-input"
                                                                             maxlength="256" name="name-2"
                                                                             data-name="Name 2"
-                                                                            placeholder="Your E-mail address..."
+                                                                            placeholder="Vaša E-mail adresa.."
                                                                             id="email"><input type="text"
                                                                                                class="text-field-2 w-input"
                                                                                                maxlength="256"
                                                                                                name="name-2"
                                                                                                data-name="Name 2"
-                                                                                               placeholder="Your Phone..."
+                                                                                               placeholder="Vaš broj telefona.."
                                                                                                id="phone"></div>
-                        <div class="div-block-52"><textarea placeholder="Your Mesagge..." maxlength="5000" id="message"
+                        <div class="div-block-52"><textarea placeholder="Vaša poruka.." maxlength="5000" id="message"
                                                             name="field" data-name="Field"
                                                             class="textarea-2 w-input"></textarea></div>
                         <p id="email-form-response"></p>
+                        <input class="text-field-2 w-input" style="color:#ccc" type="submit" value="Pošalji">
                     </form>
                     <div class="w-form-done">
                         <div>Thank you! Your submission has been received!</div>
@@ -334,10 +335,10 @@
         <div class="footer-box">
             <div class="div-block-34"><a href="https://www.facebook.com/salextra" target="_blank"
                                          class="w-inline-block"><img
-                    src="64cff9b87e411be3064bcb56/64d517a32394b8640c0ebad8_facebook%20(2).png" loading="lazy" alt=""
+                    src="64cff9b87e411be3064bcb56/facebook.png" loading="lazy" alt=""
                     class="image-footer"></a><a href="https://www.instagram.com/farbanje_medijapana_salextra/"
                                                 target="_blank" class="w-inline-block"><img
-                    src="64cff9b87e411be3064bcb56/64d51e698b5b8b51a3765f98_instagram%20(1).png" loading="lazy" alt=""
+                    src="64cff9b87e411be3064bcb56/instagram.png" loading="lazy" alt=""
                     class="image-footer"></a></div>
             <div class="text-block-4"><span class="text-span-4">STEFIX Tehnology</span> © Salextra 2023 All right
                 reserved
