--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     }(window, document);</script>
     <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="img/webclip.png" rel="apple-touch-icon">
+    <style>
+        .w-webflow-badge {
+            display: none !important;
+        }
+    </style>
 </head>
 <body class="body">
 <section id="start" class="all-section nav-bar">
