--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         var n = c.documentElement, t = " w-mod-";
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);</script>
-    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link href="img/webclip.png" rel="apple-touch-icon">
     <style>
         .w-webflow-badge {
