--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 $.ajax(formAction, {
                     data: {name: name.value, email: email.value, phone: phone.value, message: message.value},
                     method: 'post',
-                    url: 'https://formspree.io/f/xnqklawn',
+                    url: 'https://formspree.io/f/mnqklybz',
                     headers: {'Accept': 'application/json'}
                 })
                     .done((res) => {
