--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="div-block-54">
                     <div class="text-block-11">Obostrano<br/>farbanje <br/>+10€/m²</div>
                     <div class="text-block-11">Farbanje<br/>u sjaju<br/>+10€/m²</div>
-                    <div class="text-block-11">Medijapan<br/>sa sarom<br/>+10€/m²</div>
+                    <div class="text-block-11">Medijapan<br/>sa šarom<br/>+10€/m²</div>
                 </div>
             </div>
             <div class="div-block-53"><h2 class="heading-16">Cene ostalih usluga variraju u zavistnosti od tipa i obima
